CSS tweaks and commenting out the links from the webform confirmation page.

--- a/sites/all/themes/omegadbm/css/global.css
+++ b/sites/all/themes/omegadbm/css/global.css
@@ -141,5 +141,15 @@ background-image: -moz-linear-gradient(
 }
 
 .front .block-title {
-  padding: 0 .75em 0 .75em;
+  padding: .5em .75em 0 .75em;
+}
+
+
+/*
+ * Reusable styles
+ *
+ ********************************************/
+
+.bold {
+  font-weight: bold;
 }
